# thesis

./: .gitignore  LICENSE  README.md  README.org
blue/src/: ad.scm  blue.scm  env.scm  str.scm  utils.scm
cad/: README.md  cad.cabal
cad/src/: AD.hs
ccom-6990/: Annotated Bibliography.tex  README.md  draft1.tex  paper.tex  refs.bib
effect-survey/: README.md  effect-survey.cabal  mini-scheme.cabal
effect-survey/src/Language/: Environment.hs  Expr.hs
mini-scheme/: README.md  mini-scheme.cabal
mini-scheme/app/: Main.hs
mini-scheme/paper/: draft1.tex
mini-scheme/src/: Eval.hs  Language.hs
mini-scheme/src/Eval/: Effectful.hs  Freer.hs  FusedEffects.hs  MTL.hs  Polysemy.hs
mini-scheme/src/Language/: Environment.hs  Expr.hs  Lexer.hs  Parser.hs
mpl/: MPL.cf  README.md  Setup.hs  mpl.cabal
mpl/app/: Main.hs
mpl/src/: Eval.hs  Lexer.hs  MPL.hs  Parser.hs  Syntax.hs
paper/: draft1.tex  refs.bib
papers/: ad-transformations.tex
tagless-ad/: tagless-ad.cabal
tagless-ad/paper/: draft1.tex
tagless-ad/src/: Main.hs
technical-report/blue/: annotated-bib.tex  refs.bib
technical-report/fm-ai/: paper.tex  refs.bib
technical-report/fm-ai/models/: base.als  rough_agent.als
technical-report/mpl/: annotated-bib.tex  annote.tex  pres.tex  refs.bib  report.tex
