cabal-version:      3.0
name:               cad
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           https://github.com/ih1d/thesis
author:             Isaac Hiram Lopez Diaz
maintainer:         isaac.lopez@upr.edu
category:           Math
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  AD
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   src
    default-language: Haskell2010
