cabal-version:      3.0
name:               mini-scheme
version:            0.1.0.0
synopsis:           Effects Survey
homepage:           https://github.com/ih1d/thesis
author:             Isaac Hiram Lopez Diaz
maintainer:         isaac.lopez@upr.edu
category:           Data
build-type:         Simple
extra-doc-files:    README.md

common warnings
    ghc-options: -Wall

executable mini-scheme
    import:           warnings
    build-depends:    base ^>=4.18.3.0
                    , mini-scheme
    hs-source-dirs:   app
    main-is:          Main.hs
    
library
    import:           warnings
    exposed-modules:
        Language
        Eval
    other-modules:
        Language.Expr
        Language.Environment
        Language.Lexer
        Language.Parser
        Eval.MTL
        Eval.Freer
    build-depends:    base ^>=4.18.3.0
                    , mtl
                    , freer-simple
                    , deepseq
    hs-source-dirs:   src
    default-language: Haskell2010


