cabal-version:      3.0
name:               tagless-ad
version:            0.1.0.0
synopsis:           Tagless Final AD
homepage:           https://github.com/ih1d/thesis
author:             Isaac Hiram Lopez Diaz
maintainer:         isaac.lopez@upr.edu
category:           Language
build-type:         Simple

executable ad
    ghc-options: 
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wmissing-export-lists
        -Wmissing-home-modules
        -Wpartial-fields
        -Wredundant-constraints
        -Wunused-packages
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   src
    default-language: Haskell2010
